First version of the n8n Oracle agent tool

--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "n8n-nodes-<...>",
+  "name": "n8n-nodes-oracle-database-ai-tool",
   "version": "0.1.0",
-  "description": "",
+  "description": "A parameterizable N8N node for Oracle database queries that can be integrated as an agent tool.",
   "keywords": [
-    "n8n-community-node-package"
+    "n8n-community-node-package",
+    "oracle"
   ],
   "license": "MIT",
   "homepage": "",
   "author": {
-    "name": "",
-    "email": ""
+    "name": "Leandro Romano Lee",
+    "email": "leandrorlee@gmail.com"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/<...>/n8n-nodes-<...>.git"
+    "url": "https://github.com/leandrolee/n8n-nodes-oracle-database-ai-tool.git"
   },
   "engines": {
     "node": ">=20.15"
@@ -33,21 +34,23 @@
   "n8n": {
     "n8nNodesApiVersion": 1,
     "credentials": [
-      "dist/credentials/ExampleCredentialsApi.credentials.js",
-      "dist/credentials/HttpBinApi.credentials.js"
+      "dist/credentials/OracleApi.credentials.js"
     ],
     "nodes": [
-      "dist/nodes/ExampleNode/ExampleNode.node.js",
-      "dist/nodes/HttpBin/HttpBin.node.js"
+      "dist/nodes/Oracle/OracleDatabaseTool.node.js"
     ]
   },
   "devDependencies": {
-    "@typescript-eslint/parser": "~8.32.0",
-    "eslint": "^8.57.0",
+    "@types/oracledb": "^6.6.1",
+    "@typescript-eslint/parser": "^8.34.1",
     "eslint-plugin-n8n-nodes-base": "^1.16.3",
-    "gulp": "^5.0.0",
+    "gulp": "^5.0.1",
+    "n8n-workflow": "^1.82.0",
     "prettier": "^3.5.3",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "oracledb": "^6.8.0"
   },
   "peerDependencies": {
     "n8n-workflow": "*"
